--- a/app/styles/main.css
+++ b/app/styles/main.css
@@ -1,4 +1,16 @@
-.left-side{
+body{
+  font-family: font-family: 'IM Fell Great Primer', serif;
+
+}
+
+.header{
+  width: 100%;
+  height: 80px;
+  background-color: teal;
+  color: white;
+
+}
+  .left-side{
   float: left;
   padding: 10px 100px 10px 10px;
 
@@ -6,10 +18,15 @@
 
 .right-side{
     padding: 10px 10px 10px 100px;
-
+    height: 100%;
 }
+
 
 .header{
   text-align: center;
   padding: 10px;
+}
+
+.footer{
+  vertical-align: bottom;
 }
