--- a/app/templates/home.html
+++ b/app/templates/home.html
@@ -1,7 +1,7 @@
 <div class="container">
   <div class="header">
   <h1>Bloc Chat</h1>
-  <!--<p><a ng-click="home.logOut()">Sign Out</a></p>-->
+  <p><a ng-click="home.logOut()">Sign Out</a></p>
 </div>
 <div class="left-side">
   <h3>Take me to:</h3>
