--- a/app/templates/security.html
+++ b/app/templates/security.html
@@ -9,6 +9,6 @@
       </form>
   </div>
   <div class="modal-footer">
-          <button class="btn btn-primary" type="button" ng-click="security.logUserIn(security.userName)">Submit</button>
+          <button class="btn btn-primary" type="button" ng-click="security.setUserName(security.userName)">Submit</button>
   </div>
 </div>
